backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: user-app
        image: papis212/user-app
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: user/healthy/live   
            port: 3000          
          initialDelaySeconds: 10  
          periodSeconds: 5        
          timeoutSeconds: 5        
          failureThreshold: 3       
          successThreshold: 1      

        readinessProbe:
          httpGet:
            path: user/healthy/ready   
            port: 3000
          initialDelaySeconds: 5    
          periodSeconds: 5         
          timeoutSeconds: 3         
          failureThreshold: 3       
          successThreshold: 1

        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
