network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicyfordb
  namespace: default
spec:
  podSelector: 
    matchLabels:
      app: database
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend
    ports:                  
    - protocol: TCP
      port: 3306
